<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/create_task_gradient_up"
    tools:context=".CreateTask">

    <LinearLayout
        android:id="@+id/upper_layout"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:orientation="vertical"
        android:background="@drawable/create_task_gradient_up">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textAlignment="center"
            android:layout_marginTop="20dp">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_keyboard_backspace_24"
                android:layout_marginStart="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_marginStart="85dp"
                android:text="Create a Task"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Title"
            android:layout_marginStart="18dp"
            android:layout_marginTop="25dp"
            android:textSize="18sp"/>


        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Title Name"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:maxLines="1"
            android:inputType="textAutoCorrect"
            android:includeFontPadding="true"
            android:textCursorDrawable="@color/white"
            android:backgroundTint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Date"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:maxLines="1"
            android:textSize="20sp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="15dp"
            android:includeFontPadding="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.6dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white" />



    </LinearLayout>


    <ScrollView
        android:layout_width="410dp"
        android:layout_height="477dp"
        android:layout_below="@+id/upper_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="-14dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-12dp"
        android:background="@drawable/create_task_down"
        android:foregroundGravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="0dp"
                        android:text="Start Time"
                        android:textColor="@color/h2_color"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/start_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="40dp"
                        android:text="01:22 pm"
                        android:textColor="#BC000000"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:gravity="center"
                    android:paddingHorizontal="5dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="0dp"
                        android:text="End Time"
                        android:textColor="@color/h2_color"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/end_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="40dp"
                        android:text="03:20 pm"
                        android:textColor="#BC000000"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="23dp"
                android:background="#CE000000" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingEnd="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="24dp"
                    android:text="Description"
                    android:textColor="@color/h2_color"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/black"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="4"
                    android:outlineProvider="bounds"
                    android:text="Click Here to Write Task Description ...\n\n\n"
                    android:textColor="#F5171717"
                    android:textCursorDrawable="@color/white" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="23dp"
                android:background="#A85A5656" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="30dp"
                    android:text="Category"
                    android:textColor="@color/h2_color"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cat_btn1"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/category_button"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/cat1"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/cat_btn2"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/category_button"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/cat2"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/cat_btn3"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="260dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/category_button"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/cat3"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/cat_btn4"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="110dp"
                    android:background="@drawable/category_button"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/cat4"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/cat_btn5"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="110dp"
                    android:background="@drawable/category_button"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/cat5"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/cat_btn6"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="260dp"
                    android:layout_marginTop="110dp"
                    android:background="@drawable/category_button"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/cat6"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

            </RelativeLayout>


            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@null"
                android:text="Create Task"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>


    </ScrollView>


</RelativeLayout>